<resources>
    <string name="app_name" translatable="false">zetta</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_overview">Overview</string>
    <string name="platforms">Platforms</string>
    <string name="activity">Activity</string>
    <string name="total_downloads">Downloads</string>
    <string name="data_consumed">Data</string>
    <string name="time_spent">Time</string>
    <string name="no_analytics_yet">Nothing downloaded yet. Your stats will show up here.</string>
    <string name="recent_downloads">Recent downloads</string>
    <string name="others">Others</string>
    <string name="folders">Folders</string>
    <string name="new_folder">New folder</string>
    <string name="folder_name">Folder name</string>
    <string name="add_link">Add link</string>
    <string name="paste_link">Paste a link</string>
    <string name="no_bookmarks">No links saved here yet.</string>
    <string name="no_folders">Make a folder to start saving links.</string>
    <string name="saved_to_folder">Saved</string>
    <string name="items_count">%1$d items</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="quick_quality">Quality</string>
    <plurals name="bookmark_items">
        <item quantity="one">%d link</item>
        <item quantity="other">%d links</item>
    </plurals>
    <string name="credits_author" translatable="false">Built and maintained by Nikshep Doggalli</string>
    <string name="credits_instagram" translatable="false">instagram.com/nikkk.exe</string>
    <string name="credits_site" translatable="false">nikshep.vercel.app</string>
    <string name="silent_share_download">Silent share download</string>
    <string name="silent_share_download_summary">Shared links download straight to a notification without opening the app</string>
    <string name="worst_quality">Worst quality</string>
    <string name="best_quality">Best quality</string>
    <string name="search">Search</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_results">Clear results</string>
    <string name="download_all">Download all</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="directories">Folders</string>
    <string name="music_directory">Audio folder</string>
    <string name="video_directory">Video folder</string>
    <string name="updating">Updating</string>
    <string name="ytdl_update_hint">Useful tip while downloading updates</string>
    <string name="update_ytdl">Update yt-dlp to the new version</string>
    <string name="about">About</string>
    <string name="source_code">Source code</string>
    <string name="search_hint">Search or insert URL</string>
    <string name="failed_download">Could not download file</string>
    <string name="download_notification_channel_name">File downloads</string>
    <string name="download_notification_channel_description">Notification showing the progress of downloading audio and video files</string>
    <string name="you_are_in_latest_version">Using the latest version</string>
    <string name="ytld_update_success">New yt-dlp version installed</string>
    <string name="ytdl_already_updating">Installing new yt-dlp version</string>
    <string name="ytdl_updating_started">Downloading new yt-dlp version</string>
    <string name="Remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_history_desc">Delete the entire history, permanently</string>
    <string name="confirm_delete_history">Confirm</string>
    <string name="search_history_hint">Search from history</string>
    <string name="search_command_hint">Search from commands</string>
    <string name="no_results">No results</string>
    <string name="more">Settings</string>
    <string name="update_app">Check for updates</string>
    <string name="version">Version</string>
    <string name="command_directory">Custom command folder</string>
    <string name="couldnt_find_apk">Could not find a suitable APK</string>
    <string name="downloading_update">Downloading new version</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="concurrent_fragments_summary">Number of fragments of a DASH/HLS native video to download concurrently</string>
    <string name="concurrent_fragments">Concurrent fragments</string>
    <string name="downloading">Downloading</string>
    <string name="limit_rate">Limit rate</string>
    <string name="limit_rate_summary">Maximum download rate (in bytes per second), e.g. 50K or 4.2M</string>
    <string name="aria2_summary">Use aria2c as downloader instead of the default</string>
    <string name="processing">Processing</string>
    <string name="embed_subs_summary">Add subtitles in the video</string>
    <string name="embed_thumb">Thumbnail covers</string>
    <string name="embed_thumb_summary">Use the thumbnail as cover art</string>
    <string name="add_chapters">Chapters in videos</string>
    <string name="add_chapters_summary">Mark YouTube / SponsorBlock segments as chapters for the video</string>
    <string name="save_thumb">Save thumbnail</string>
    <string name="save_thumb_summary">Save the thumbnail in the download folder</string>
    <string name="audio_format">Audio format</string>
    <string name="video_format">Video format</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_quality_summary">0 (best) 10 (worst)</string>
    <string name="cancel_task">Cancel task</string>
    <string name="run_command">Run command</string>
    <string name="command_download_notification_channel_name">Command downloads</string>
    <string name="command_download_notification_channel_description">Notification showing the progress of downloading using a yt-dlp command</string>
    <string name="items_left">item(s) left</string>
    <string name="history_is_empty">History is empty</string>
    <string name="you_are_going_to_delete">Deleting</string>
    <string name="url">URL</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="api_key">Use API key</string>
    <string name="api_key_summary">Video recommendations from YouTube API</string>
    <string name="update_app_summary">Announce new versions of the app when it is opened. The data is extracted from the official GitHub Repository</string>
    <string name="downloads">Downloads</string>
    <string name="remove_deleted">Remove deleted</string>
    <string name="remove_duplicates">Remove duplicates</string>
    <string name="sort_by">Sorting</string>
    <string name="trendingPlaylist" translatable="false">ytdlnis-TRENDING</string>
    <string name="remove_downloading">Cancel downloads</string>
    <string name="incognito_summary">Download without adding to history</string>
    <string name="configure_download">Adjust download</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="video_quality">Video quality</string>
    <string name="embed_subtitles">Embed subtitles</string>
    <string name="add_chapter">Add chapters</string>
    <string name="show_download_card">Show download card</string>
    <string name="download_card_summary">Modify settings for that item before downloading. Disabling this option starts the download immediately</string>
    <string name="Open_File">Open file</string>
    <string name="you_are_going_to_delete_multiple_items">Deleting multiple items</string>
    <string name="delete_file_too">Delete the file from the device</string>
    <string name="delete_files_too">Delete the files from the device</string>
    <string name="request_permission_desc">This app needs file permissions to save downloads on the device</string>
    <string name="exit_app">Exit app</string>
    <string name="warning">Warning</string>
    <string name="sponsorblock_nonmusic">Non-music and off-topic portions</string>
    <string name="sponsorblock_sponsors">Sponsors</string>
    <string name="sponsorblock_intro">Intro</string>
    <string name="sponsorblock_outro">Outro</string>
    <string name="sponsorblock_promos">Self promos</string>
    <string name="sponsorblock_previews">Previews</string>
    <string name="sponsorblock_fillers">Fillers</string>
    <string name="sponsorblock_reminders">Subscription reminders</string>
    <string name="select_sponsorblock_filtering">Select SponsorBlock filtering</string>
    <string name="unfound_file" translatable="false">/404.404</string>
    <string name="save_dir">Save dir</string>
    <string name="new_template">New template</string>
    <string name="adjust_templates">Adjust templates</string>
    <string name="edit_selected">Edit selected</string>
    <string name="adjust_video">Adjust video</string>
    <string name="concurrent_downloads">Concurrent downloads</string>
    <string name="concurrent_downloads_summary">Number of downloads executing at the same time</string>
    <string name="defaultValue">Default</string>
    <string name="container">Container</string>
    <string name="template">Template</string>
    <string name="logs">Logs</string>
    <string name="date_added">Date added</string>
    <string name="update_ytdl_nightly">Nightly version of yt-dlp</string>
    <string name="adjust_audio">Adjust audio</string>
    <string name="file_name_template">Filename template</string>
    <string name="language">Language</string>
    <string name="command_templates">Command templates</string>
    <string name="terminal">Terminal</string>
    <string name="format">Format</string>
    <string name="select_format">Select format</string>
    <string name="please_wait">Please wait</string>
    <string name="remove_search_history">Clear search history</string>
    <string name="enable_mtime">Enable mtime</string>
    <string name="enable_mtime_summary">Set the HTTP Last-Modified header as last modified time</string>
    <string name="update_formats">Update formats</string>
    <string name="error_updating_formats">Error updating formats!</string>
    <string name="log_downloads">Log downloads</string>
    <string name="log_downloads_summary">Create a log file for each download</string>
    <string name="download_queue">Download queue</string>
    <string name="running">Running</string>
    <string name="command">Command</string>
    <string name="import_from_clipboard">Import from clipboard</string>
    <string name="export_from_clipboard">Export to clipboard</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="create_template">Create template</string>
    <string name="edit">Edit</string>
    <string name="shortcuts_desc">Use commonly used commands to create templates</string>
    <string name="cancelled">Cancelled</string>
    <string name="errored">Errored</string>
    <string name="copy_log">Copy log</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="error_restarting_download">Error trying to restart the download</string>
    <string name="update_template">Update template</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cookies">Cookies</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="general">General</string>
    <string name="subtitles">Subtitles</string>
    <string name="advanced">Advanced</string>
    <string name="automatic_backup">Automatic backup</string>
    <string name="backup_path">Backup path</string>
    <string name="automatic_backup_summary">Automatically make a backup of everything when a new version of the application is found</string>
    <string name="packages">Packages</string>
</resources>