<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_app_icon"
                android:scaleType="center" />

            

            <TextView
                android:id="@+id/logs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logs"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_file_open_24" />


            

            <TextView
                android:id="@+id/downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/downloads"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableTint="?android:colorAccent"
                app:drawableStartCompat="@drawable/ic_downloads" />

            

            <TextView
                android:id="@+id/cookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/cookies"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/baseline_cookie_24" />

            

            


            <View
                android:layout_margin="0dp"
                style="@style/Divider.Horizontal" />

            <TextView
                android:id="@+id/set_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/general"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/ic_settings" />

<TextView
                android:id="@+id/set_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/directories"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/baseline_folder_24" />

<TextView
                android:id="@+id/set_downloading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/downloads"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/ic_downloads" />

<TextView
                android:id="@+id/set_processing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/processing"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/baseline_star_half_24" />

<TextView
                android:id="@+id/set_updating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/updating"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/ic_update" />

<TextView
                android:id="@+id/set_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/advanced"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/baseline_settings_suggest_24" />

<TextView
                android:id="@+id/set_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                android:paddingVertical="15dp"
                android:text="@string/backup_restore"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="15dp"
                app:drawableStartCompat="@drawable/baseline_save_alt_24" />

            <!-- zetta credits footer -->
            <View
                android:layout_margin="0dp"
                style="@style/Divider.Horizontal" />

            <LinearLayout
                android:id="@+id/credits_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="18dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/credits_logo"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_zetta_logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/credits_author"
                        android:textAppearance="@style/TextAppearance.Zetta.CardTitle" />

                    <TextView
                        android:id="@+id/credits_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:text="@string/credits_instagram"
                        android:textAppearance="@style/TextAppearance.Zetta.Caption"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/credits_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:text="@string/credits_site"
                        android:textAppearance="@style/TextAppearance.Zetta.Caption"
                        android:textColor="?attr/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
